# oyun

./: CMakeLists.txt
main/: main.c  mekanikler.js
main/include/: everything.c  everything.h
